--- a/practica6/app.json
+++ b/practica6/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "input",
-    "slug": "input",
+    "name": "practica6",
+    "slug": "practica6",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
