--- a/practica7/package.json
+++ b/practica7/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "practica6",
+  "name": "practica7",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,14 +10,10 @@
   },
   "dependencies": {
     "expo": "~49.0.8",
-    "expo-constants": "~14.4.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-icons": "^4.10.1",
     "react-native": "0.72.4",
-    "react-native-web": "~0.19.6",
-    "react-dom": "18.2.0",
-    "@expo/webpack-config": "^19.0.0"
+    "expo-constants": "~14.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
