--- a/practica10/app.json
+++ b/practica10/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "tarea9",
-    "slug": "tarea9",
+    "name": "practica10",
+    "slug": "practica10",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
