--- a/tarea8/app.json
+++ b/tarea8/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "practica8",
-    "slug": "practica8",
+    "name": "tarea8",
+    "slug": "tarea8",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
