--- a/tarea10/package.json
+++ b/tarea10/package.json
@@ -12,7 +12,9 @@
     "@react-navigation/drawer": "^6.6.4",
     "@react-navigation/material-bottom-tabs": "^6.2.17",
     "@react-navigation/native": "^6.1.8",
+    "@react-navigation/stack": "^6.3.18",
     "expo": "~49.0.13",
+    "expo-constants": "~14.4.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
@@ -21,8 +23,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-vector-icons": "^10.0.0",
-    "expo-constants": "~14.4.2"
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
